@@ -1,3 +1,7 @@
+2016-04-14 0.7.2 beta
+Also reset mapped midi devices.
+Translation work...
+
 2016-04-13 0.7.2 beta
 Reset channel activity indicators properly.
 Windows version now has an icon.
